--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -3,131 +3,136 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:orientation="vertical"
 
     tools:context=".SignupActivity">
 
     <Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:title="Sign Up"
-        android:id="@+id/toolbar"
         android:background="@android:color/white"
-        />
+        android:title="Sign Up" />
+
     <ScrollView
-        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
         android:paddingTop="40dp"
         android:paddingBottom="40dp">
+
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
-<com.google.android.material.textfield.TextInputLayout
-    android:layout_width="match_parent"
-    android:id="@+id/ed1"
-    android:layout_height="wrap_content">
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Email address"
-        android:inputType="textEmailAddress"
-        android:layout_margin="20dp"
-        android:id="@+id/phone"/>
-</com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="wrap_content">
+
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/ed1"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:hint="Email address"
+                    android:inputType="textEmailAddress" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/ed2"
-                android:layout_below="@+id/ed1"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ed1">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/email"
-        android:layout_margin="20dp"
-        android:inputType="textPassword"
-        android:hint="Password (minimum 8 characters)"
-        android:id="@+id/password"/>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/email"
+                    android:layout_margin="20dp"
+                    android:hint="Password (minimum 8 characters)"
+                    android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
                 android:id="@+id/ed3"
-                android:layout_below="@+id/ed2"
-                android:layout_height="wrap_content">
-   <com.google.android.material.textfield.TextInputEditText
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:hint="Mobile Number"
-       android:layout_margin="20dp"
-       android:layout_below="@+id/password"
-       android:id="@+id/phnumber"
-       android:inputType="number"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ed2">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/phnumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/password"
+                    android:layout_margin="20dp"
+                    android:hint="Mobile Number"
+                    android:inputType="number" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
                 android:id="@+id/ed4"
-                android:layout_below="@+id/ed3"
-                android:layout_height="wrap_content">
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Full Name"
-        android:layout_margin="20dp"
-        android:id="@+id/name"
-        android:layout_below="@+id/phnumber"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ed3">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/phnumber"
+                    android:layout_margin="20dp"
+                    android:hint="Full Name" />
             </com.google.android.material.textfield.TextInputLayout>
+
             <TextView
                 android:id="@+id/gendertext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Select your Gender"
                 android:layout_below="@+id/ed4"
                 android:layout_marginStart="20dp"
-                android:textSize="15sp"/>
-    <LinearLayout
-        android:id="@+id/gender"
-        android:layout_below="@+id/ed4"
-        android:weightSum="2"
-        android:layout_margin="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+                android:text="Select your Gender"
+                android:textSize="15sp" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Female"
-        android:textAllCaps="false"
-        android:id="@+id/female"
-        android:layout_weight="1"
+            <LinearLayout
+                android:id="@+id/gender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ed4"
+                android:layout_margin="20dp"
+                android:weightSum="2">
 
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Male"
-        android:id="@+id/male"
-        android:textAllCaps="false"
-        android:layout_below="@+id/name"
-        android:layout_weight="1"
-       />
-    </LinearLayout>
+                <Button
+                    android:id="@+id/female"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Female"
+                    android:textAllCaps="false"
+
+                    />
+
+                <Button
+                    android:id="@+id/male"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/name"
+                    android:layout_weight="1"
+                    android:text="Male"
+                    android:textAllCaps="false" />
+            </LinearLayout>
         </RelativeLayout>
     </ScrollView>
+
     <Button
+        android:id="@+id/create"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_margin="20dp"
-        android:id="@+id/create"
         android:text="Create Account"></Button>
-
-
-
 
 
 </RelativeLayout>
